class28-29/app-infra/microservices-on-k8s/argocd-apps/01-argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    purpose: gitops
